# equinor_hackathon_2019

./: .gitignore  .gitmodules  README.md  setup.bash
catkin_ws/src/ascend_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/ascend_msgs/msg/: Map.msg
catkin_ws/src/ascend_msgs/srv/: GlobalMap.srv
catkin_ws/src/dronelib/: CMakeLists.txt  package.xml
catkin_ws/src/equinor2018/: CMakeLists.txt  package.xml
catkin_ws/src/equinor2018/scripts/: rospy  task1.py
catkin_ws/src/equinor2018_simulator/: CMakeLists.txt  README.md  debug_open_world.sh  package.xml  parseWorlds.sh
catkin_ws/src/equinor2018_simulator/csvMaps/: 123456789.csv  easy1.csv  empty.csv  multiple_goals.csv
catkin_ws/src/equinor2018_simulator/include/equinor2018_simulator/: csv_parser.h  map_handle.h  wall_merger.h  zone.h
catkin_ws/src/equinor2018_simulator/launch/: testing.launch
catkin_ws/src/equinor2018_simulator/models/box/: model.config  model.sdf
catkin_ws/src/equinor2018_simulator/models/box/meshes/: box.dae
catkin_ws/src/equinor2018_simulator/models/drone/: drone.sdf  model.config
catkin_ws/src/equinor2018_simulator/models/numberbox/: model.sdf
catkin_ws/src/equinor2018_simulator/models/numberbox/meshes/: box.dae  number2.dae  number3.dae  number6.dae  number9.dae
catkin_ws/src/equinor2018_simulator/models/numberbox/scripts/: numberbox.material
catkin_ws/src/equinor2018_simulator/models/numberbox1/: model.sdf
catkin_ws/src/equinor2018_simulator/models/numberbox2/: model.config  model.sdf
catkin_ws/src/equinor2018_simulator/models/numberbox4/: model.sdf
catkin_ws/src/equinor2018_simulator/models/numberbox5/: model.sdf
catkin_ws/src/equinor2018_simulator/models/numberbox7/: model.sdf
catkin_ws/src/equinor2018_simulator/models/numberbox8/: model.config  model.sdf
catkin_ws/src/equinor2018_simulator/models/numberbox9/: model.config
catkin_ws/src/equinor2018_simulator/src/: csv_parser.cpp  csv_to_gz_util.cpp  map_handle.cpp  wall_merger.cpp  zone.cpp
catkin_ws/src/equinor2018_simulator/worlds/: empty.world  flyablemap.world  multiple_goals.world  task1small.world
catkin_ws/src/game_master/: CMakeLists.txt  package.xml  scorefile1.txt
catkin_ws/src/game_master/include/game_master/: global_map_service.h  mission_timer.h
catkin_ws/src/game_master/launch/: debug.launch  game_master_1.launch
catkin_ws/src/game_master/scripts/: scoreboard_node.py  scoreboard_server.py
catkin_ws/src/game_master/src/: game_master.cpp  game_master_1.cpp  global_map_service.cpp  mission_timer.cpp  scoreboard_node.py
catkin_ws/src/simulator/: CMakeLists.txt  debug_open_world.sh  package.xml  parseWorlds.sh
catkin_ws/src/simulator/csvMaps/: dynamic.csv  dynamic1.csv  dynamic2.csv  dynamic_boost.csv  easy3.csv  empty.csv  flyablemap.csv  hallway.csv  static1.csv  static_boost.csv  task1_a.csv  task1small.csv  task3.csv  task3small.csv
catkin_ws/src/simulator/include/simulator/: csv_parser.h  map_handle.h  wall_merger.h
catkin_ws/src/simulator/launch/: export.launch  px4_config.yaml  px4_pluginlists.yaml  testing.launch
catkin_ws/src/simulator/models/boostbox/: model.config  model.sdf
catkin_ws/src/simulator/models/box/cad/: box.blend  box.blend1
catkin_ws/src/simulator/models/drone/: drone.sdf
catkin_ws/src/simulator/models/dynamic_obstacle/: model.config  model.sdf
catkin_ws/src/simulator/models/equidrone/: equidrone.sdf
catkin_ws/src/simulator/models/numberbox/: model.config
catkin_ws/src/simulator/models/numberbox/cad/: numberbox.blend  numberbox.blend1
catkin_ws/src/simulator/models/numberbox/media/: numbers.xcf
catkin_ws/src/simulator/models/numberbox/meshes/: number1.dae  number4.dae  number5.dae  number7.dae  number8.dae  numberbox.stl
catkin_ws/src/simulator/models/numberbox1/: model.config
catkin_ws/src/simulator/models/numberbox3/: model.config  model.sdf
catkin_ws/src/simulator/models/numberbox4/: model.config
catkin_ws/src/simulator/models/numberbox5/: model.config
catkin_ws/src/simulator/models/numberbox6/: model.config  model.sdf
catkin_ws/src/simulator/models/numberbox7/: model.config
catkin_ws/src/simulator/models/numberbox9/: model.sdf
catkin_ws/src/simulator/models/simple_camera/: model.config  model.sdf
catkin_ws/src/simulator/src/: csv_parser.cpp  csv_to_gz_util.cpp  dynamic_obstacle.cc  dynamic_obstacle_publisher.cpp  map_handle.cpp  mocap_node.cpp  wall_merger.cpp  zone.cpp
catkin_ws/src/simulator/worlds/: 123456789.world  asphalt.world  dynamic.world  dynamic1.world  dynamic_boost.world  easy1.world  easy3.world  empty.world  hallway.world  multiple_goals.world  static.world  static1.world  static_boost.world  task1_a.world  task1small.world  task3.world  task3small.world
catkin_ws/src/techathon/: CMakeLists.txt  package.xml
catkin_ws/src/techathon/launch/: base.launch  main.launch
catkin_ws/src/techathon/models/equidrone/: equidrone.sdf  model.config
catkin_ws/src/techathon/scripts/: task1.py
catkin_ws/src/techathon/src/: controlled_takeoff.py  dronelib.py  main.py  random_movement.py  teamfile.yaml  test.py  util.py
catkin_ws/src/techathon/src/examples/: controlled_takeoff.py
catkin_ws/src/techathon/src/old/: drone.py
catkin_ws/src/techathon/worlds/: asphalt.world
docs/: Task2.md  Task3.md  Task_Overview.md  examples.md  getting_started.md  how_to_build.md  index.html  intro.md  old_simple_python_example.md  old_simulator.md  preparation.md  prereq.md  simple_cpp_example.md  simulator.md  task.md  troubleshooting.md  workflow.md  working.md
software/: install_gazebo_dev_tools.sh  install_gzweb.sh  install_ros.sh  install_scoreboard_deps.sh  install_utils.sh
